<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivMoviePoster"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="16:9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/movie_poster"/>

        <TextView
            android:id="@+id/tvMovieTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:textColor="@color/text_color"
            android:fontFamily="@font/lato"
            android:textSize="24sp"
            android:textStyle="bold"
            android:maxLines="1"
            android:ellipsize="end"
            tools:text="Movie Title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivMoviePoster" />

        <TextView
            android:id="@+id/tvMovieTagLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/cardo"
            android:textSize="16sp"
            android:textStyle="italic"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvMovieTitle"
            tools:text="Movie TagLine" />

        <TextView
            android:id="@+id/tvImdbIdLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:fontFamily="@font/lato"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_marginStart="24dp"
            android:textSize="16sp"
            android:text="@string/imdb_id"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvMovieTagLine"/>

        <TextView
            android:id="@+id/tvImdbId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:textSize="16sp"
            tools:text="tt456374"
            android:layout_marginStart="4dp"
            app:layout_constraintStart_toEndOf="@+id/tvImdbIdLabel"
            app:layout_constraintTop_toTopOf="@+id/tvImdbIdLabel"/>

        <TextView
            android:id="@+id/tvVoteLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:fontFamily="@font/lato"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:text="@string/vote"
            app:layout_constraintTop_toBottomOf="@+id/tvImdbIdLabel"
            app:layout_constraintStart_toStartOf="@+id/tvImdbIdLabel"/>

        <TextView
            android:id="@+id/tvVote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:textSize="16sp"
            tools:text="7.9/10"
            android:layout_marginStart="4dp"
            app:layout_constraintTop_toTopOf="@+id/tvVoteLabel"
            app:layout_constraintStart_toEndOf="@+id/tvVoteLabel"/>

        <TextView
            android:id="@+id/tvDescriptionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:fontFamily="@font/lato"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:text="@string/description"
            app:layout_constraintTop_toBottomOf="@+id/tvVoteLabel"
            app:layout_constraintStart_toStartOf="@+id/tvVoteLabel"/>

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:fontFamily="@font/lato"
            android:textSize="16sp"
            android:layout_marginStart="38dp"
            android:layout_marginEnd="38dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDescriptionLabel"
            app:layout_constraintStart_toStartOf="@+id/tvDescriptionLabel"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>